# waft

./: .gitignore  .worktreeinclude  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md  about.hbs  about.toml  justfile
.claude/commands/: handle-remediation-item.md
.github/workflows/: ci.yml  pages.yml  release.yml
.maquette/brand/: approved.md  brief.md  design-system.json  tokens.css
.maquette/components/: approved.md  component-catalog.json  core-actions.component-catalog.json  core-actions.replica.html  core-actions.review.md  docs-composites.component-catalog.json  docs-composites.replica.html  (+7 more)
benches/: README.md  scaling.rs
docs/: architecture.md
hooks/: post-checkout
planning/: ImplementationPlan.txt  InitialRemediationReport.md  InitialSpecDocument.txt  RipGrepIgnoreExtraction.txt  WorktreeincludeConfigAndFixtureMatrix.md  WorktreeincludeImplementationPRSteps.md  WorktrunkParityReport.md  folder-copy-optimization.md
scripts/: run-remediations.sh  self-test.sh
site/: astro.config.mjs  package-lock.json  package.json
src/: cli.rs  config.rs  context.rs  eligibility_groups.rs  error.rs  executor.rs  fs.rs  git.rs  lib.rs  main.rs  model.rs  path.rs  planner.rs  policy_filter.rs  validate.rs  walk.rs  worktreeinclude.rs  worktreeinclude_engine.rs
tests/: backend_parity.rs  cli.rs  clonefile_spike.rs  config_discovery_integration.rs  config_parse_unit.rs  config_resolution_unit.rs  copy_integration.rs  git_integration.rs  info_integration.rs  modes_flag_override_integration.rs  modes_profile_integration.rs  property.rs  worktrunk_parity.rs
(+44 files in other folders)
