[package]
name = "wiff"
version = "0.1.0"
edition = "2021"
description = "Copy .worktreeinclude-selected ignored files between Git worktrees"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
tempfile = "3"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
proptest = "1"
