[package]
name = "waft"
version = "0.1.0"
edition = "2024"
description = "Copy .worktreeinclude-selected ignored files between Git worktrees"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
gix = "0.81"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "2"
toml = "0.9"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
proptest = "1"
